# st0x-oracle-server

./: .dockerignore  .env.example  .gitignore  CHEATSHEET.md  Cargo.toml  DEPLOY.md  Dockerfile  README.md  REUSE.toml  RUNBOOK.md  config.toml  deploy.nix  flake.nix  fly.toml  keys.nix  os.nix  prep.sh  registry  rust.nix  services.nix
.cargo/: audit.toml
.github/workflows/: audit.yml  cd.yaml  ci.yml  deploy.yml
config/: st0x-oracle-diff-observer.toml  st0x-oracle-server.toml
examples/: probe_local.rs  probe_local_v2.rs  probe_local_v3.rs
infra/: default.nix  main.tf  terraform.tfstate.age  terraform.tfvars.age  terraform.tfvars.example  variables.tf
secrets/: st0x-oracle-diff-observer-env.age  st0x-oracle-diff-observer-env.age.example  st0x-oracle-server-env.age  st0x-oracle-server-env.age.example  tailscale-authkey.age  tailscale-authkey.age.example
src/: alpaca.rs  cache.rs  config.rs  diff_observer.rs  lib.rs  main.rs  market_hours.rs  metrics.rs  oracle.rs  pricing_client.rs  registry.rs  sign.rs
strategy/: registry  settings.yaml  st0x-dia-fixed-spread-v3.rain  st0x-fixed-spread-v2.rain  st0x-fixed-spread-v3.rain  st0x-fixed-spread-v4.rain  st0x-fixed-spread.rain  st0x-oracle-limit-v2.rain  st0x-oracle-limit-v3.rain  st0x-oracle-limit-v4.rain  st0x-oracle-limit.rain
tests/: integration.rs  smoke_kms.rs  smoke_prod.rs
